change <a> style and add header link

--- a/src/app.html
+++ b/src/app.html
@@ -47,7 +47,7 @@
 				padding: 2vw;
 			}
 
-			a, button {
+			a, button, summary {
 				all: unset;
 				cursor: pointer;
 				padding: 0;
@@ -58,11 +58,11 @@
 				transition: box-shadow 100ms;
 			}
 
-			a:hover, button:hover {
+			a:hover, button:hover, summary:hover {
 				box-shadow: inset 0 -1.5em var(--link-accent-color);
 			}
 
-			a:focus, button:focus {
+			a:focus, button:focus, summary:focus {
 				outline: solid;
 			} 
 
