--- a/src/app.html
+++ b/src/app.html
@@ -7,11 +7,10 @@
 
 		<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>💡</text></svg>">
 
-
-		%svelte.head%
+		%sveltekit.head%
 	</head>
 
 	<body>
-		%svelte.body%
+		%sveltekit.body%
 	</body>
 </html>
